--- a/contacts.html
+++ b/contacts.html
@@ -29,11 +29,12 @@
       <iframe src="https://docs.google.com/forms/d/e/FORM_ID/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 
-    <p>Find me on LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin">LinkedIn Profile</a></p>
+    <p>Find me on LinkedIn: <a href="https://www.linkedin.com/in/krima-patel-3b0625377?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn Profile</a></p>
 
     <footer class="site-footer">
-      <p><a class="github-badge" href="https://github.com/your-username/personal-portfolio">View on GitHub</a></p>
+      <p><a class="github-badge" href="https://github.com/kriimm_077/krimapatel">View on GitHub</a></p>
     </footer>
   </main>
 </body>
+
 </html>
